--- a/client/css/block/_about.scss
+++ b/client/css/block/_about.scss
@@ -37,7 +37,7 @@
     width: 100%;
     text-align: end;
     margin: 0;
-    color: rgb(93, 93, 93);
+    color: $bg-color;
     font-weight: 800;
     text-transform: uppercase;
 }
