--- a/client/css/block/_brand.scss
+++ b/client/css/block/_brand.scss
@@ -11,12 +11,19 @@
     
 }
 
+.brand-h {
+    background: -webkit-linear-gradient( $act-color, $base-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+}
+
 .brand-subtitle {
   margin: 0;
   text-align: center;
-  font-size: 1.7rem;
+  font-size: 2rem;
   font-weight: 500;
-  color: rgb(255, 145, 0);
+  color: $base-color;
 }
 .brand-p {
   margin: 2rem 0;
