--- a/client/css/block/_home.scss
+++ b/client/css/block/_home.scss
@@ -61,18 +61,19 @@
 .order {
     cursor: pointer;
     text-transform: uppercase;
-    font-size: 4rem;
-    font-weight: 100;
+    font-size: 3.5rem;
+    font-weight: 500;
     color: $act-color;
     padding: 1rem 3rem;
     background: transparent;
-    border: .1rem solid $act-color;
+    border: .3rem solid $act-color;
     border-radius: 1rem;
     overflow: hidden;
     position: relative;
     transition: .2s;
     &:hover {
-        color: rgb(233, 233, 233);
+        color: $bg-color;
+        border-color: rgba(255, 255, 255, 0);
         text-shadow: 0 .1rem .1rem rgba(255, 255, 255, 0.888);
         .order_span { 
             height: 100%;
@@ -81,6 +82,7 @@
     .order_span { 
         transition: .2s;
         position: absolute;
+        border-radius: 1rem;
         z-index: -1;
         top: 0;
         left: 0;
