--- a/client/css/block/_main.scss
+++ b/client/css/block/_main.scss
@@ -42,7 +42,6 @@ body {
 .block-h {
     font-size: 3.5rem;
     margin: 3rem 0;
-    color: $base-color;
 }
 
 
@@ -78,7 +77,7 @@ body {
 .spiner-item {
     width: 3rem;
     height: 3rem;
-    border: 0.3rem solid $act-color;
+    border: 0.3rem solid rgb(0, 157, 255);
     animation: spiner 3s infinite;
 }
 .spiner-result {
@@ -93,17 +92,17 @@ body {
 0% {
     transform: rotate(0);
     border-radius: 0;
-    border: 0.3rem solid #ff4800;
+    border: 0.3rem solid #a44620;
 }
 50% {
     transform: rotate(600deg);
     border-radius: 50%;
-    border: 0.7rem solid #ff4800;
+    border: 0.7rem solid #00ffff;
 }
 100% {
     transform: rotate(0deg);
     border-radius: 0;
-    border: 0.3rem solid #ff4800;
+    border: 0.3rem solid #ff0000;
 }
 }
 .spiner--off {
