--- a/client/css/style.css
+++ b/client/css/style.css
@@ -297,7 +297,6 @@ body {
 .block-h {
   font-size: 3.5rem;
   margin: 3rem 0;
-  color: #7990A3;
 }
 
 .bg {
@@ -339,7 +338,7 @@ body {
 .spiner-item {
   width: 3rem;
   height: 3rem;
-  border: 0.3rem solid #C1DFF9;
+  border: 0.3rem solid #009dff;
   -webkit-animation: spiner 3s infinite;
           animation: spiner 3s infinite;
 }
@@ -357,19 +356,19 @@ body {
     -webkit-transform: rotate(0);
             transform: rotate(0);
     border-radius: 0;
-    border: 0.3rem solid #ff4800;
+    border: 0.3rem solid #a44620;
   }
   50% {
     -webkit-transform: rotate(600deg);
             transform: rotate(600deg);
     border-radius: 50%;
-    border: 0.7rem solid #ff4800;
+    border: 0.7rem solid #00ffff;
   }
   100% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
     border-radius: 0;
-    border: 0.3rem solid #ff4800;
+    border: 0.3rem solid #ff0000;
   }
 }
 
@@ -378,19 +377,19 @@ body {
     -webkit-transform: rotate(0);
             transform: rotate(0);
     border-radius: 0;
-    border: 0.3rem solid #ff4800;
+    border: 0.3rem solid #a44620;
   }
   50% {
     -webkit-transform: rotate(600deg);
             transform: rotate(600deg);
     border-radius: 50%;
-    border: 0.7rem solid #ff4800;
+    border: 0.7rem solid #00ffff;
   }
   100% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
     border-radius: 0;
-    border: 0.3rem solid #ff4800;
+    border: 0.3rem solid #ff0000;
   }
 }
 
@@ -490,7 +489,7 @@ body {
 }
 
 .header--active {
-  background: #192D45;
+  background: #2a5d68;
   -webkit-transition: .4s;
   transition: .4s;
   -webkit-box-shadow: 0 0 1rem #fff;
@@ -499,6 +498,8 @@ body {
 
 .header--active .logo-img {
   background: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .header-container {
@@ -516,7 +517,7 @@ body {
 }
 
 .logo {
-  width: 50%;
+  width: 80%;
   font-size: 1.6rem;
   height: 100%;
   font-weight: 500;
@@ -536,7 +537,7 @@ body {
 }
 
 .logo-img {
-  width: 4rem;
+  min-width: 4rem;
   height: 4rem;
   background: rgba(255, 255, 255, 0.878);
   -webkit-box-shadow: 0 0 0.3rem rgba(255, 255, 255, 0.521);
@@ -578,7 +579,7 @@ body {
 }
 
 .ham-act {
-  background: #192D45;
+  background: #2a5d68;
   border-radius: 50%;
   padding: .2rem;
 }
@@ -614,7 +615,7 @@ body {
       -ms-flex-align: start;
           align-items: flex-start;
   overflow-y: auto;
-  background: #192D45;
+  background: #2a5d68;
   -webkit-transition: .2s;
   transition: .2s;
 }
@@ -835,12 +836,12 @@ body {
 .order {
   cursor: pointer;
   text-transform: uppercase;
-  font-size: 4rem;
-  font-weight: 100;
+  font-size: 3.5rem;
+  font-weight: 500;
   color: #C1DFF9;
   padding: 1rem 3rem;
   background: transparent;
-  border: 0.1rem solid #C1DFF9;
+  border: 0.3rem solid #C1DFF9;
   border-radius: 1rem;
   overflow: hidden;
   position: relative;
@@ -849,7 +850,8 @@ body {
 }
 
 .order:hover {
-  color: #e9e9e9;
+  color: #2a5d68;
+  border-color: rgba(255, 255, 255, 0);
   text-shadow: 0 0.1rem 0.1rem rgba(255, 255, 255, 0.888);
 }
 
@@ -861,6 +863,7 @@ body {
   -webkit-transition: .2s;
   transition: .2s;
   position: absolute;
+  border-radius: 1rem;
   z-index: -1;
   top: 0;
   left: 0;
@@ -940,14 +943,14 @@ body {
   width: 100%;
   text-align: end;
   margin: 0;
-  color: #5d5d5d;
+  color: #2a5d68;
   font-weight: 800;
   text-transform: uppercase;
 }
 
 .schedule-subh {
   margin: 0;
-  color: #192D45;
+  color: #2a5d68;
   background: #C1DFF9;
   padding: .5rem 1rem;
   font-size: 2.6rem;
@@ -1252,7 +1255,7 @@ body {
 
 .services {
   margin-top: 2rem;
-  background: #192D45;
+  background: #2a5d68;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1262,7 +1265,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 7rem 0;
+  padding: 5rem 0 7rem;
 }
 
 .services-container {
@@ -1282,9 +1285,8 @@ body {
 }
 
 .services-h {
-  margin: 0 0 4rem;
-  color: white;
-  text-shadow: 0 0.2rem 0.2rem #aaaaaa;
+  margin: 0 0 2rem;
+  color: #C1DFF9;
 }
 
 .services-ul {
@@ -1354,7 +1356,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   border: .2rem solid #fff;
-  background: #192D45;
+  background: #2a5d68;
 }
 
 .services-li__h {
@@ -1546,12 +1548,18 @@ body {
           align-items: center;
 }
 
+.brand-h {
+  background: -webkit-linear-gradient(#C1DFF9, #7990A3);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .brand-subtitle {
   margin: 0;
   text-align: center;
-  font-size: 1.7rem;
+  font-size: 2rem;
   font-weight: 500;
-  color: #ff9100;
+  color: #7990A3;
 }
 
 .brand-p {
@@ -1606,7 +1614,7 @@ body {
 }
 
 .partner-block::-webkit-scrollbar-thumb {
-  background-color: #192D45;
+  background-color: #2a5d68;
 }
 
 .partner-block__a:hover {
@@ -1628,7 +1636,7 @@ body {
 .footer {
   border-top: .1rem solid #000;
   min-height: 30rem;
-  background: #192D45;
+  background: #2a5d68;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
