--- a/client/css/block/_contact.scss
+++ b/client/css/block/_contact.scss
@@ -1,4 +1,5 @@
 .contact {
+    position: relative;
     background-image: url('../img/bg.jpg');
     background-position: center top;
     background-repeat: no-repeat;
@@ -15,7 +16,6 @@
 }
 
 .form {
-    position: relative;
     max-width: 60rem;
     width: 95%;
     display: flex;
@@ -24,7 +24,8 @@
     align-items: center;
     row-gap: 3rem;
     padding: 1rem 2rem;
-  }
+    backdrop-filter: blur(1rem);
+}
 
 .form-h {
     width: 100%;
