--- a/client/css/block/_header.scss
+++ b/client/css/block/_header.scss
@@ -110,6 +110,7 @@
     align-items: center;
     margin: 5rem 0;
     padding: 0;
+    list-style-type: none;
 }
 .nav__li{
     padding: 2rem 0;
@@ -125,6 +126,9 @@
     border-bottom: .2rem solid rgba(139, 139, 139, 0.7);
     &:hover {
         color: $act-color;
+    }
+    a {
+        width: max-content;
     }
 }
 .nav__li-active {
