--- a/client/css/block/_main.scss
+++ b/client/css/block/_main.scss
@@ -15,22 +15,12 @@ body {
     align-items: center;
     min-height: 40rem;
     img {opacity: 0; transform: translate(0, 2rem); transition: .7s;}
-    p {opacity: 0; transform: translate(0, 2rem); transition: .7s;}
+    h2 {opacity: 0; transform: translate(0, 2rem); transition: .7s;}
 }
 
 .section-act {
     img {opacity: 1; transform: translate(0);}
-    p {opacity: 1; transform: translate(0);}
-    @keyframes sectionact {
-        0% {
-            img {opacity: 0; transform: translate(0, 2rem);}
-            p {opacity: 0; transform: translate(0, 2rem);}
-        }
-        100% {
-            img {opacity: 1; transform: translate(0);}
-            p {opacity: 1; transform: translate(0);}
-        }
-    }
+    h2 {opacity: 1; transform: translate(0);}
 }
 
 .container {
@@ -56,23 +46,24 @@ body {
     display: none;
 }
 
-
-.spiner, .spiner-form {
+.spiner {
     position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 10001;
-    width: 100%;
-    height: 100%;
     background: #fff;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 .spiner-form {
-    display: none;
-    background: rgba(129, 236, 255, 0.600);
     position: absolute;
+    display: none;
+    background: none;
+}
+.spiner, .spiner-form{
+    width: 100%;
+    height: 100%;
+    z-index: 10000;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
 }
 .spiner-item {
     width: 3rem;
@@ -80,12 +71,22 @@ body {
     border: 0.3rem solid rgb(0, 157, 255);
     animation: spiner 3s infinite;
 }
-.spiner-result {
-    padding: 1rem;
+
+.result {
+    max-width: 80%;
     display: none;
-    color: #FFF;
+    position: fixed;
+    z-index: 10;
+    top: 10rem;
+    left: 1%;
+    background: rgb(248, 248, 248);
+    border-radius: 2rem;
+    padding: 1rem 1.5rem;
+    color: rgb(81, 81, 81);
     text-align: center;
     font-size: 2rem;
+    transition: .2s;
+    box-shadow: 1rem 1rem 1rem rgba(80, 80, 80, 0.4), inset 0 0 1rem rgba(80, 80, 80, 0.15);
 }
 
 @keyframes spiner {
